src/snapshots/templates__test__error_unexpected_keyword.snap
---
source: src/main.rs
assertion_line: 1128
expression: "Hello {% in %}"

---
Unexpected keyword: in. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% in %}
  │          ^^


